--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
         "postcss": "^8.4.31",
         "tailwindcss": "^3.1.0",
         "vite": "^7.0.7"
+    },
+    "dependencies": {
+        "jsplumb": "^2.15.6",
+        "sortablejs": "^1.15.6"
     }
 }
